--- a/flipr/Base.lproj/Main.storyboard
+++ b/flipr/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="ht5-0b-bSA" customClass="SelectPhotosViewController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="3uW-TO-sV1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Vp-Og-Xqb">
                             <size key="itemSize" width="50" height="50"/>
@@ -71,11 +71,11 @@
                         <viewControllerLayoutGuide type="bottom" id="eT0-x7-Q03"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Yoy-nf-iBL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gre-Ij-oNh">
-                                <rect key="frame" x="0.0" y="208" width="320" height="335"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gre-Ij-oNh">
+                                <rect key="frame" x="0.0" y="144" width="320" height="335"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZKD-7f-AtU">
@@ -135,7 +135,7 @@
                                     <constraint firstItem="ZKD-7f-AtU" firstAttribute="centerX" secondItem="gre-Ij-oNh" secondAttribute="centerX" id="sKg-rm-1Pg"/>
                                 </constraints>
                             </scrollView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IY7-2U-ZWV">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IY7-2U-ZWV">
                                 <rect key="frame" x="0.0" y="20" width="320" height="190"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -178,50 +178,67 @@
         <scene sceneID="Lep-kh-Qpo">
             <objects>
                 <tableViewController id="AfQ-FN-28K" customClass="VideoTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="71" sectionHeaderHeight="22" sectionFooterHeight="22" id="Wkr-fZ-0fo">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="22" sectionFooterHeight="22" id="Wkr-fZ-0fo">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="VideoCell" rowHeight="71" id="Uej-I5-MGo" customClass="VideoCell">
-                                <rect key="frame" x="0.0" y="22" width="320" height="71"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="VideoCell" rowHeight="185" id="Uej-I5-MGo" customClass="VideoCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="185"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Uej-I5-MGo" id="W1U-Ll-CQ1">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="70"/>
+                                <tableViewCellContentView key="contentView" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Uej-I5-MGo" id="W1U-Ll-CQ1">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7tv-ZA-vCr" customClass="PFImageView">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="160" id="fqW-zA-xud"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfb-mr-2vj">
-                                            <rect key="frame" x="20" y="10" width="267" height="29"/>
+                                            <rect key="frame" x="5" y="162" width="267" height="29"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01:01:01" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAY-wl-srL">
-                                            <rect key="frame" x="20" y="39" width="74" height="20"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01:01:01" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAY-wl-srL">
+                                            <rect key="frame" x="240" y="135" width="74" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="JNT-NW-y6m"/>
-                                                <constraint firstAttribute="width" constant="74" id="jnZ-mZ-SiC"/>
+                                                <constraint firstAttribute="width" constant="74" id="tzx-BN-Fbs"/>
+                                                <constraint firstAttribute="height" constant="20" id="wz5-Xo-4n7"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <nil key="highlightedColor"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="highlightedColor" red="0.2507035755" green="1" blue="0.2511447315" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Created on: Sat, Dec 20, '14" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqe-lR-vOJ">
-                                            <rect key="frame" x="118" y="39" width="169" height="20"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created on: Sat, Dec 20, '14" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqe-lR-vOJ">
+                                            <rect key="frame" x="-6" y="164" width="320" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="PAY-wl-srL" firstAttribute="leading" secondItem="zfb-mr-2vj" secondAttribute="leading" id="FWT-hG-gHc"/>
-                                        <constraint firstItem="PAY-wl-srL" firstAttribute="top" secondItem="zfb-mr-2vj" secondAttribute="bottom" id="fjm-ZM-1Vc"/>
-                                        <constraint firstAttribute="trailing" secondItem="zfb-mr-2vj" secondAttribute="trailing" id="qEe-Te-co8"/>
-                                        <constraint firstItem="zfb-mr-2vj" firstAttribute="top" secondItem="W1U-Ll-CQ1" secondAttribute="top" constant="10" id="s5Q-wT-RWm"/>
-                                        <constraint firstItem="zfb-mr-2vj" firstAttribute="leading" secondItem="W1U-Ll-CQ1" secondAttribute="leading" constant="20" symbolic="YES" id="tyE-eg-rMB"/>
+                                        <constraint firstItem="7tv-ZA-vCr" firstAttribute="leading" secondItem="W1U-Ll-CQ1" secondAttribute="leading" id="Fub-Tu-1Ou"/>
+                                        <constraint firstItem="Vqe-lR-vOJ" firstAttribute="top" secondItem="7tv-ZA-vCr" secondAttribute="bottom" constant="4" id="RV6-vn-ajv"/>
+                                        <constraint firstItem="zfb-mr-2vj" firstAttribute="leading" secondItem="W1U-Ll-CQ1" secondAttribute="leading" constant="5" id="RbL-d5-ENx"/>
+                                        <constraint firstAttribute="trailing" secondItem="zfb-mr-2vj" secondAttribute="trailing" constant="48" id="UHJ-2U-UcR"/>
+                                        <constraint firstAttribute="bottom" secondItem="Vqe-lR-vOJ" secondAttribute="bottom" id="W0f-2F-ZQ7"/>
+                                        <constraint firstItem="7tv-ZA-vCr" firstAttribute="top" secondItem="W1U-Ll-CQ1" secondAttribute="top" id="awx-v5-pVg"/>
+                                        <constraint firstItem="zfb-mr-2vj" firstAttribute="top" secondItem="PAY-wl-srL" secondAttribute="bottom" constant="7" id="cPp-6I-VOn"/>
+                                        <constraint firstItem="Vqe-lR-vOJ" firstAttribute="trailing" secondItem="PAY-wl-srL" secondAttribute="trailing" id="ccN-1c-Gij"/>
+                                        <constraint firstItem="Vqe-lR-vOJ" firstAttribute="leading" secondItem="W1U-Ll-CQ1" secondAttribute="leading" constant="-6" id="e0L-yi-ivx"/>
+                                        <constraint firstItem="zfb-mr-2vj" firstAttribute="top" secondItem="7tv-ZA-vCr" secondAttribute="bottom" constant="2" id="hx8-FH-eCD"/>
+                                        <constraint firstAttribute="trailing" secondItem="PAY-wl-srL" secondAttribute="trailing" constant="6" id="kNb-x2-hKK"/>
+                                        <constraint firstAttribute="trailing" secondItem="7tv-ZA-vCr" secondAttribute="trailing" id="wck-Lf-qBm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="coverPhoto" destination="7tv-ZA-vCr" id="64H-Tx-zx6"/>
                                     <outlet property="createDateLabel" destination="Vqe-lR-vOJ" id="D7V-9P-3sZ"/>
                                     <outlet property="durationLabel" destination="PAY-wl-srL" id="lEa-5x-8y9"/>
                                     <outlet property="titleLabel" destination="zfb-mr-2vj" id="Z3F-Ry-Zpb"/>
@@ -273,6 +290,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="gva-CI-UOm"/>
+        <segue reference="7xf-By-dE3"/>
     </inferredMetricsTieBreakers>
 </document>
